# AlignResume

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  embedded_terms_dict.txt  field_embeddings_info.txt  fields_with_similar_terms.txt  job_embeddings.py  job_extraction.py  job_posting_model.py  main.py  pyproject.toml  requirements.txt  resume_structure.txt  test_llm_conn.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: integrate.yml
src/model/: JobPostingSchema.py  ResumeSchema.py
src/tool/: datamuse_word_finder.py  document_extractor.py  embedding_util.py  job_crawler.py  job_embeddings.py  job_extractor.py  llm_manager.py  resume_extractor.py  resume_generator.py
src/ui/: setupview.py  sidebar.py  text_state_manager.py
